test/types/string/bradc/string2complex/badStringToImag.good
badStringToImag.chpl:3: error: Missing terminating 'i' character when converting from string to imag(64)
