test/types/string/bradc/string2complex/badStringToImag.chpl
var s = "1.2";

var c = s:imag(64);
